--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<button id="filter">Filter, Yo!</button>
 		</div>
 
-		<div id="song-list">
+		<div id="songs" class="song-list">
 			<h1>Song Name</h1>
 			<p>Artist name | Album name | Genre</p>
 
