Updated files to include javascript addition of songs

--- a/index.html
+++ b/index.html
@@ -66,22 +66,12 @@
 		</div>
 
 		<div id="songs" class="song-list">
-			<h1>Song Name</h1>
-			<p>Artist name | Album name | Genre</p>
-
-			<h1>Song Name</h1>
-			<p>Artist name | Album name | Genre</p>
-
-			<h1>Song Name</h1>
-			<p>Artist name | Album name | Genre</p>
-
-			<h1>Song Name</h1>
-			<p>Artist name | Album name | Genre</p>
+			
 		</div>
 	</main>	
 </div>
 
-
+<script type="text/javascript" src="songs.js"></script>
 </body>
 </html>
 
