--- a/add-music.html
+++ b/add-music.html
@@ -56,7 +56,7 @@
 		<button id="filter">Filter, Yo!</button>
 		</div>
 
-		<div id="song-list">
+		<div class="song-list">
 			<div id="song-search">
 	Song Name: <br><input type="text" name="songName"><br><br>
 	Artist: <br><input type="text" name="artist"><br><br>
