completed adding songs to DOM and appending second JSON file

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
 		  <div id="songs" class="song-list">
 			
 		</div>
+		<div>
+			<button id="showMore-btn">SHOW MORE>></button>
+		</div>
 		</section>
 
 		<section class="hidden" id="add-view">
@@ -90,10 +93,14 @@
 
 	</main>	
 </div>
+<script type="text/javascript" src="js/main-iife.js"></script>
+<script type="text/javascript" src="js/addSong.js"></script>
 <script type="text/javascript" src="js/home.js"></script>
 <script type="text/javascript" src="js/list.js"></script>
 <script type="text/javascript" src="js/add.js"></script>
-<script type="text/javascript" src="js/songs.js"></script>
+<script type="text/javascript" src="js/eventListeners.js"></script>
+<script type="text/javascript" src="js/loadJSON.js"></script>
+
 </body>
 </html>
 
