all but delete button

--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 	</main>	
 </div>
 <script type="text/javascript" src="js/main-iife.js"></script>
+<script type="text/javascript" src="js/showMoreBtn.js"></script>
 <script type="text/javascript" src="js/addSong.js"></script>
 <script type="text/javascript" src="js/home.js"></script>
 <script type="text/javascript" src="js/list.js"></script>
 <script type="text/javascript" src="js/add.js"></script>
-<script type="text/javascript" src="js/eventListeners.js"></script>
 <script type="text/javascript" src="js/loadJSON.js"></script>
 
 </body>
