updates still no delete button

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 		<section class="hidden" id="list-view">
 		<!--  List Music View -->
 		  <div id="songs" class="song-list">
-			
+			<ul id="ulSongs">
+			</ul>
 		</div>
 		<div>
 			<button id="showMore-btn">SHOW MORE>></button>
