I figured out the delete button YAY

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
 		  <div id="songs" class="song-list">
 			<ul id="ulSongs">
 			</ul>
+			<ul id="addedSongs">
+			</ul>
 		</div>
 		<div>
 			<button id="showMore-btn">SHOW MORE>></button>
@@ -94,6 +96,11 @@
 
 	</main>	
 </div>
+
+<script
+src="https://code.jquery.com/jquery-3.2.1.min.js"
+integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+crossorigin="anonymous"></script>
 <script type="text/javascript" src="js/main-iife.js"></script>
 <script type="text/javascript" src="js/showMoreBtn.js"></script>
 <script type="text/javascript" src="js/addSong.js"></script>
